# keyring-program

./: .gitignore  Cargo.toml  README.md  SRFC.md
client/: Cargo.toml
client/src/: algorithm.rs  client.rs  error.rs  keyring.rs  keystore.rs  lib.rs  state.rs
client/tests/: mod.rs
js/: package.json  tsconfig.json
js/src/: algorithm.ts  index.ts  instruction.ts  keyring.ts  keystore.ts  state.ts  tlv.ts  util.ts
js/tests/: main.test.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tlv.rs
program/tests/: mod.rs
