[package]
name = "spl-keyring-program-client"
version = "0.0.1"
description = "Solana Program Library Keyring Program Rust Client"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-client = "1.16.1"
solana-program-test = "1.16.1"
solana-sdk = "1.16.1"
spl-discriminator = "0.1.0"
spl-keyring-program = { path = "../program", features = ["no-entrypoint"] }
