[package]
name = "spl-keyring-client"
version = "0.0.1"
description = "Solana Program Library Keyring Program Rust Client"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-sdk = "1.16.2"
spl-discriminator = "0.1.0"
spl-keyring-program = { version = "0.0.1", path = "../program", features = ["no-entrypoint"] }
spl-token-client = { version = "0.5.1", git = "https://github.com/solana-labs/solana-program-library", branch = "master" }
thiserror = "1.0.43"

[dev-dependencies]
solana-program-test = "1.16.2"
