[package]
name = "spl-keyring-program"
version = "0.0.1"
description = "Solana Program Library Keyring Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "=0.9.3"
getrandom = { version = "0.2.2", features = ["custom"] }
solana-program = "1.16.1"
spl-discriminator = "0.1.0"
spl-program-error = "0.2.0"
spl-type-length-value = { version = "0.2.0", path = "../../spl/libraries/type-length-value", features = ["borsh"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
