[package]
name = "spl-keyring-program"
version = "0.0.1"
description = "Solana Program Library Keyring Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10.3"
getrandom = { version = "0.2.2", features = ["custom"] }
solana-program = "1.16.2"
spl-discriminator = { version = "0.1.0", features = ["borsh"] }
spl-program-error = "0.2.0"

[dev-dependencies]
solana-program-test = "1.16.2"
solana-sdk = "1.16.2"
spl-keyring-client = { version = "0.0.1", path = "../client" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
